<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".activities.botconfiguration.BotConfigurationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:orientation="vertical" >

            <!-- CHAT HISTORY LINE COUNT-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/history_linecount_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/configuration_chat_history_line_count">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/history_linecount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:imeOptions="actionDone"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <!-- OK AND CANCEL BUTTONS -->
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <!-- CANCEL -->
        <android.support.design.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/cancel"/>

        <!-- OK -->
        <android.support.design.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"/>

    </LinearLayout>

</RelativeLayout>