<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="end"
    tools:context=".activities.main.MainActivity">

    <RelativeLayout
        style="@style/BackgroundStyle"
        android:id="@+id/root_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Main / Central focus -->
        <android.support.v7.widget.RecyclerView
            style="@style/BackgroundStyle"
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/suggestedactions"/>

        <!-- Suggested Actions -->
        <android.support.v7.widget.RecyclerView
            style="@style/BackgroundStyle"
            android:id="@+id/suggestedactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/container_buttons"/>

        <!-- button and textview on the bottom -->
        <LinearLayout
            android:id="@+id/container_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!-- MIC BUTTON -->
            <ImageView
                style="@style/MicStyle"
                android:id="@+id/mic_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_mic"
                android:layout_gravity="center"
                android:clickable="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- let the user type in what is said -->
                <android.support.design.widget.TextInputLayout
                    style="@style/TextInputAccentStyle"
                    android:id="@+id/textinputlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/bot_input_hint"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/textinput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionSend"
                        android:inputType="text|textCapSentences|textAutoComplete|textAutoCorrect"/>
                </android.support.design.widget.TextInputLayout>

                <!-- Show what the user is saying -->
                <TextView
                    android:id="@+id/speech_detection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:singleLine="true"
                    android:background="@android:color/transparent"/>

            </LinearLayout>

        </LinearLayout>

        <!-- Animated Assistant -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/animated_assistant"
                android:layout_width="@dimen/animated_assistant_width"
                android:layout_height="@dimen/animated_assistant_height"
                android:layout_marginBottom="15dp"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:elevation="2dp"
                android:visibility="gone"/>

        </RelativeLayout>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:theme="@style/NavigationDrawerStyle"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        app:menu="@menu/nav_drawer_menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="14dp"
            android:orientation="vertical">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_show_full_conversation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/nav_menu_show_full_conversation"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_night_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/nav_menu_night_mode"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_show_textinput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/nav_menu_show_textinput"/>

        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>